# ksysguard

./: .kde-ci.yml  .reviewboardrc  CMakeLists.txt  DaemonAgent.cpp  DaemonAgent.h  FancyPlotter.cpp  FancyPlotter.h  IconList.cpp  IconList.h  MainMenu.cpp  MainMenu.h  Makefile  Makefile.am  Makefile.in  Makefile.in.temp  MultiMeter.cpp  MultiMeter.h  OSProcess.cpp  OSProcess.h  OSProcessList.cpp  OSProcessList.h  OSStatus.cpp  OSStatus.h  PLAN  PerfMonPage.cpp  PerfMonPage.h  ProcListPage.cpp  ProcListPage.h  ProcTreePage.cpp  ProcTreePage.h  ProcessList.cpp  ProcessList.h  ProcessMenu.cpp  ProcessMenu.h  ProcessTree.cpp  ProcessTree.h  README  ReniceDlg.cpp  ReniceDlg.h  SensorAgent.cpp  (+31 more)
example/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  eventsrc  ksysguard.notifyrc  ksysguardd.conf  ksysguarddrc  top.kdelnk
gui/: BarGraph.cc  BarGraph.h  CMakeLists.txt  ColorPicker.cc  ColorPicker.h  DancingBars.cc  DancingBars.h  DancingBarsSettings.ui  DummyDisplay.cc  DummyDisplay.h  FancyPlotter.cc  FancyPlotter.h  FancyPlotterSettings.ui  HostConnector.cc  HostConnector.cpp  HostConnector.h  HostConnector.ui  KSGAppletSettings.cc  KSGAppletSettings.h  KSGAppletSettingsWidget.ui  KSysGuardApplet  KSysGuardApplet.cc  KSysGuardApplet.h  KSysGuardApplet.xml  KSysGuardAppletSettings.ui  ListView.cc  ListView.h  ListViewSettings.cc  ListViewSettings.h  ListViewSettings.ui  LogFile.cc  LogFile.h  LogFileSettings.cc  LogFileSettings.h  LogFileSettings.ui  MainMenu.cc  MainMenu.h  Makefile.am  Messages.sh  MultiMeter.cc  (+85 more)
gui/SensorDisplayLib/: BarGraph.cc  BarGraph.cpp  BarGraph.h  BarGraphSettings.ui  CMakeLists.txt  DancingBars.cc  DancingBars.cpp  DancingBars.h  DancingBarsSettings.cc  DancingBarsSettings.cpp  DancingBarsSettings.h  DancingBarsSettings.ui  DummyDisplay.cc  DummyDisplay.cpp  DummyDisplay.h  FancyPlotter.cc  FancyPlotter.cpp  FancyPlotter.h  FancyPlotterSettings.cc  FancyPlotterSettings.cpp  FancyPlotterSettings.h  FancyPlotterSettings.ui  ListView.cc  ListView.cpp  ListView.h  ListViewSettings.cc  ListViewSettings.cpp  ListViewSettings.h  ListViewSettings.ui  ListViewSettingsWidget.ui  ListViewSettingsWidget.ui.h  LogFile.cc  LogFile.cpp  LogFile.h  LogFileSettings.ui  Makefile.am  MultiMeter.cc  MultiMeter.cpp  MultiMeter.h  MultiMeterSettings.cc  (+43 more)
gui/ksgrd/: CMakeLists.txt  ColorPicker.cc  ColorPicker.h  HostConnector.cc  HostConnector.h  HostConnector.ui  Makefile.am  SensorAgent.cc  SensorAgent.cpp  SensorAgent.h  SensorClient.h  SensorDisplay.cc  SensorDisplay.h  SensorManager.cc  SensorManager.cpp  SensorManager.h  SensorShellAgent.cc  SensorShellAgent.h  SensorSocketAgent.cc  SensorSocketAgent.cpp  SensorSocketAgent.h  StyleEngine.cc  StyleEngine.h  StyleSettings.cc  StyleSettings.h  StyleSettings.ui  TimerSettings.cc  TimerSettings.h  TimerSettings.ui
gui/sensor/: AggregateFancyPlotterSensor.cc  AggregateFancyPlotterSensor.h  BasicSensor.cc  BasicSensor.h  DataPointSensor.cc  DataPointSensor.h  FancyPlotterSensor.cc  FancyPlotterSensor.h  LogSensor.cc  LogSensor.h  SensorDataProvider.cc  SensorDataProvider.h
gui/tests/: CMakeLists.txt  ksysguarddtest.cpp  ksysguarddtest.h  signalplotterbenchmark.cpp  signalplotterbenchmark.h  signalplottertest.cpp  signalplottertest.h
kstats/: CMakeLists.txt  client.h  ksysguard_iface.xml  ksysguarddaemon.cpp  ksysguarddaemon.h
kstats/autotests/: CMakeLists.txt
kstats/test/: CMakeLists.txt  main.cpp
ksysguardd/: CMakeLists.txt  Command.c  Command.h  Makefile.am  PWUIDCache.c  PWUIDCache.h  Porting-HOWTO  conf.c  conf.h  config-ksysguardd.h.cmake  ksysguardd.c  ksysguardd.h  modules.h
ksysguardd/CContLib/: ccont.c  ccont.h
ksysguardd/Darwin/: CMakeLists.txt
ksysguardd/FreeBSD/: CMakeLists.txt  CPU.c  CPU.h  ChangeLog  Command.c  Command.h  Dispatcher.h  Makefile.am  Memory.c  Memory.h  ProcessList.c  ProcessList.h  TODO  acpi.c  acpi.h  apm.c  apm.h  conf.c  conf.h  cpuinfo.c  cpuinfo.h  diskstat.c  diskstat.h  ksysguardd.c  ksysguardd.h  loadavg.c  loadavg.h  logfile.c  logfile.h  netdev.c  netdev.h  stat.c  stat.h  uptime.c  uptime.h
ksysguardd/GNU/: CMakeLists.txt  dummy.cpp
ksysguardd/Irix/: CMakeLists.txt  LoadAvg.c  LoadAvg.h  Makefile.am  Memory.c  Memory.h  NetDev.c  NetDev.h  ProcessList.c  ProcessList.h  cpu.c  cpu.h
ksysguardd/Linux/: CMakeLists.txt  Command.c  Command.h  Dispatcher.c  Dispatcher.h  Makefile.am  Memory.c  Memory.h  PWUIDCache.c  PWUIDCache.h  ProcessList.c  ProcessList.h  acpi.c  acpi.h  apm.c  apm.h  conf.c  conf.h  cpuinfo.c  cpuinfo.h  diskstat.c  diskstat.h  diskstats.c  diskstats.h  i8k.c  i8k.h  ksysguardd.c  ksysguardd.h  ktopd.c  lmsensors.c  lmsensors.h  loadavg.c  loadavg.h  logfile.c  logfile.h  netdev.c  netdev.h  netstat.c  netstat.h  softraid.c  (+6 more)
ksysguardd/NetBSD/: CMakeLists.txt  CPU.c  CPU.h  Makefile.am  Memory.c  Memory.h  ProcessList.c  ProcessList.h  apm.c  apm.h  diskstat.c  diskstat.h  loadavg.c  loadavg.h  logfile.c  logfile.h  netdev.c  netdev.h
ksysguardd/OpenBSD/: CMakeLists.txt  Makefile.am  ProcessList.c  ProcessList.h  cpu.c  cpu.h  memory.c  memory.h
ksysguardd/Solaris/: CMakeLists.txt  Command.c  Command.h  Dispatcher.c  Dispatcher.h  LoadAvg.c  LoadAvg.h  Makefile.am  Memory.c  Memory.h  NetDev.c  NetDev.h  ProcessList.c  ProcessList.h  ksysguardd.c  ksysguardd.h
ksysguardd/Tru64/: CMakeLists.txt  LoadAvg.c  LoadAvg.h  Makefile.am  Memory.c  Memory.h  NetDev.c  NetDev.h
ksystemstats/: CMakeLists.txt  client.cpp  ksysguarddaemon.cpp  ksysguarddaemon.h  main.cpp  plasma-ksystemstats.service.in
ksystemstats/autotests/: CMakeLists.txt  main.cpp
libkstats/: AggregateSensor.cpp  AggregateSensor.h  CMakeLists.txt  SensorContainer.cpp  SensorContainer.h  SensorObject.cpp  SensorObject.h  SensorPlugin.cpp  SensorPlugin.h  SensorProperty.cpp  SensorProperty.h  SysFsSensor.cpp  SysFsSensor.h  SysctlSensor.h  types.h
pics/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  bash.xpm  emacs.xpm  g++.xpm  gbd.xpm  kioslave.xpm  kpanel.xpm  krootwm.xpm  login.xpm  lpd.xpm  maudio.xpm  nxterm.xpm  startkde.xpm  xemacs.xpm  xload.xpm
(+317 files in other folders)
