
# add here all files
data_DATA = g++.xpm           krootwm.xpm       tcsh.xpm \
	X.xpm             gbd.xpm           ksh.xpm           xconsole.xpm \
	bash.xpm          gcc.xpm           login.xpm         xemacs.xpm \
	bsh.xpm           gdb.xpm           lpd.xpm           xinit.xpm \
	c++.xpm           init.xpm          maudio.xpm        xload.xpm \
	cc.xpm            kaudioserver.xpm  nxterm.xpm        xterm.xpm \
	console.xpm       kbgndwm.xpm       sh.xpm            xxgbd.xpm \
	csh.xpm           kioslave.xpm      startkde.xpm      xxgdb.xpm \
	emacs.xpm         kpanel.xpm        startx.xpm   

datadir = $(kde_datadir)/ktop/pics
